final AI version

--- a/ai/dataset preparation.ipynb
+++ b/ai/dataset preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -327,7 +327,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "read = pd.read_csv(TRAIN_DATA_FILE, encoding='utf-8')\n",
+    "texts = [str(row[1]) + str(row[2]) for row in read.values]\n",
+    "labels = read[[\"type\"]].values\n",
+    "\n",
+    "\n",
+    "read = pd.read_csv(TEST_DATA_FILE, encoding='utf-8')\n",
+    "test_texts = [str(row[1]) + str(row[2]) for row in read.values]\n",
+    "test_ids = read.index.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -335,24 +353,7 @@
    },
    "outputs": [],
    "source": [
-    "texts = [] \n",
-    "labels = []\n",
-    "with codecs.open(TRAIN_DATA_FILE, encoding='utf-8') as f:\n",
-    "    reader = csv.reader(f, delimiter=',')\n",
-    "    header = next(reader)\n",
-    "    for values in reader:\n",
-    "        texts.append(text_to_wordlist(values[1] + values[2]))\n",
-    "        labels.append(values[4])\n",
-    "print('Found %s texts in train.csv' % len(texts))\n",
-    "\n",
-    "test_texts = []\n",
-    "test_ids = []\n",
-    "with codecs.open(TEST_DATA_FILE, encoding='utf-8') as f:\n",
-    "    reader = csv.reader(f, delimiter=',')\n",
-    "    header = next(reader)\n",
-    "    for values in reader:\n",
-    "        test_texts.append(text_to_wordlist(values[1] + values[2]))\n",
-    "        test_ids.append(values[0])\n",
+    "        \n",
     "print('Found %s texts in test.csv' % len(test_texts))\n",
     "\n",
     "tokenizer = Tokenizer(num_words=MAX_NB_WORDS)\n",
@@ -381,9 +382,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -399,29 +400,40 @@
     "embedding_matrix = np.zeros((nb_words, EMBEDDING_DIM))\n",
     "for word, i in word_index.items():\n",
     "    if word in word2vec.vocab:\n",
-    "        embedding_matrix[i] = word2vec.word_vec(word)\n",
+    "        try:\n",
+    "            embedding_matrix[i] = word2vec.word_vec(word)\n",
+    "        except:\n",
+    "            pass\n",
     "print('Null word embeddings: %d' % np.sum(np.sum(embedding_matrix, axis=1) == 0))\n",
     "\n",
     "########################################\n",
     "## sample train/validation data\n",
     "########################################\n",
-    "np.random.seed(1234)\n",
-    "perm = np.random.permutation(len(data))\n",
-    "idx_train = perm[:int(len(data)*(1-VALIDATION_SPLIT))]\n",
-    "idx_val = perm[int(len(data)*(1-VALIDATION_SPLIT)):]\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "data_train = data[idx_train]\n",
-    "# data_2_train = np.vstack((data_2[idx_train], data_1[idx_train]))\n",
-    "labels_train = labels[idx_train]\n",
     "\n",
-    "data_val = data[idx_val]\n",
-    "# data_2_val = np.vstack((data_2[idx_val], data_1[idx_val]))\n",
-    "labels_val = labels[idx_val]\n",
+    "data_train, data_val, labels_train, labels_val = train_test_split(data, labels, test_size=VALIDATION_SPLIT)\n",
     "\n",
-    "# weight_val = np.ones(len(labels_val))\n",
-    "# if re_weight:\n",
-    "#     weight_val *= 0.472001959\n",
-    "#     weight_val[labels_val==0] = 1.309028344"
+    "labels_train = [int(i) for i in labels_train.ravel()]\n",
+    "labels_val = [int(i) for i in labels_val.ravel()]\n",
+    "\n",
+    "# np.random.seed(1234)\n",
+    "# perm = np.random.permutation(len(data))\n",
+    "# idx_train = perm[:int(len(data)*(1-VALIDATION_SPLIT))]\n",
+    "# idx_val = perm[int(len(data)*(1-VALIDATION_SPLIT)):]\n",
+    "\n",
+    "# data_train = data[idx_train]\n",
+    "# # data_2_train = np.vstack((data_2[idx_train], data_1[idx_train]))\n",
+    "# labels_train = labels[idx_train]\n",
+    "\n",
+    "# data_val = data[idx_val]\n",
+    "# # data_2_val = np.vstack((data_2[idx_val], data_1[idx_val]))\n",
+    "# labels_val = labels[idx_val]\n",
+    "\n",
+    "# # weight_val = np.ones(len(labels_val))\n",
+    "# # if re_weight:\n",
+    "# #     weight_val *= 0.472001959\n",
+    "# #     weight_val[labels_val==0] = 1.309028344"
    ]
   },
   {
@@ -497,7 +509,7 @@
     "hist = model.fit(data_train, labels_train, \\\n",
     "                 #weight_val at the end of the next line\n",
     "        validation_data=(data_val, labels_val), \\\n",
-    "        epochs=20, batch_size=128, shuffle=True, \\\n",
+    "        epochs=4, batch_size=128, shuffle=True, \\\n",
     "        callbacks=[early_stopping], verbose=2)\n",
     "\n",
     "#model.load_weights(bst_model_path)\n",
@@ -519,10 +531,55 @@
     "########################################\n",
     "print('Start making the submission before fine-tuning')\n",
     "\n",
-    "preds = model.predict([test_data], batch_size=8192, verbose=1)\n",
+    "preds = model.predict([test_data], batch_size=150, verbose=1)\n",
     "\n",
     "submission = pd.DataFrame({'test_id':test_ids, 'is_duplicate':preds.ravel()})\n",
     "submission.to_csv('%.4f_'%(bst_val_score)+STAMP+'.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4113"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-73-ce9b1b0df2f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'values'"
+     ]
+    }
+   ],
+   "source": [
+    "test.values"
    ]
   },
   {
